--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,17 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/api-pack": "^1.2",
         "easycorp/easyadmin-bundle": "^2.3",
+        "fzaninotto/faker": "^1.9",
+        "lexik/jwt-authentication-bundle": "^2.6",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/profiler-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
         "symfony/yaml": "4.4.*"
     },
